fixed some things in recommend posts